# TypingTest

Backend/: .gitignore  pyproject.toml  pyvenv.cfg  requirements.txt
Backend/app/: .env.template  main.py  words.py  words.txt
Backend/app/alembic/: env.py
Backend/app/alembic/versions/: 2025_01_31_1528-2bae2f3ea3d4_create_user_table.py  2025_02_09_0243-3c357c2b1906_create_user_and_result_tables.py
Backend/app/api/: __init__.py
Backend/app/api/api_v1/: __init__.py  result.py  users.py  words.py  words.txt
Backend/app/auth/: utils.py
Backend/app/core/: __init__.py  config.py
Backend/app/core/models/: __init__.py  base.py  db_helper.py  user.py
Backend/app/core/schemas/: results.py  user.py
Backend/app/crud/: results.py  users.py  validate_auth.py
Backend/app/utils/: __init__.py  access_token.py  case_convert.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/account/: page.tsx
frontend/src/app/registration/: page.tsx
frontend/src/components/: RenderWords.tsx  SessionProviderWrapper.tsx  SplitWords.tsx  TypingTest.tsx
