[tool.poetry]
package-mode= false

[tool.poetry.dependencies]
python = '^3.13'
alembic = "^1.14.1"
fastapi = {extras = ["response"], version = "^0.115.7"}
orjson = "^3.10.15"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
bcrypt = "^4.2.1"
python-multipart = "^0.0.20"
[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

